--- a/FinanceMs/FinanceMs.UploadServer/FinanceMs.UploadServer.csproj
+++ b/FinanceMs/FinanceMs.UploadServer/FinanceMs.UploadServer.csproj
@@ -25,6 +25,10 @@
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
     <UseGlobalApplicationHostFile />
+    <SccProjectName>Firefly Project</SccProjectName>
+    <SccLocalPath>.</SccLocalPath>
+    <SccAuxPath />
+    <SccProvider>MSSCCI:Hansky Firefly</SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
