--- a/FinanceMs/FinanceMs.Common/FinanceMs.Common.csproj
+++ b/FinanceMs/FinanceMs.Common/FinanceMs.Common.csproj
@@ -12,6 +12,10 @@
     <AssemblyName>FinanceMs.Common</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <SccProjectName>Firefly Project</SccProjectName>
+    <SccLocalPath>.</SccLocalPath>
+    <SccAuxPath />
+    <SccProvider>MSSCCI:Hansky Firefly</SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
