--- a/FinanceMs/FinanceMs.Import/FinanceMs.Import.csproj
+++ b/FinanceMs/FinanceMs.Import/FinanceMs.Import.csproj
@@ -37,10 +37,10 @@
   <ItemGroup>
     <Reference Include="Genersoft.MDM.Pub.Server, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\DRP_Refer.Dll\MDM\Genersoft.MDM.Pub.Server.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\..\DRP_Refer.Dll\MDM\Genersoft.MDM.Pub.Server.dll</HintPath>
     </Reference>
     <Reference Include="Genersoft.MDM.WEB.Server">
-      <HintPath>..\..\DRP_Refer.Dll\MDM\Genersoft.MDM.WEB.Server.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\..\DRP_Refer.Dll\MDM\Genersoft.MDM.WEB.Server.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
