--- a/FinanceMs/FinanceMs.UploadServer/FinanceMs.UploadServer.csproj
+++ b/FinanceMs/FinanceMs.UploadServer/FinanceMs.UploadServer.csproj
@@ -62,7 +62,7 @@
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Newtonsoft.Json70">
-      <HintPath>..\..\DRP_Refer.Dll\Newtonsoft.Json70.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\..\DRP_Refer.Dll\Newtonsoft.Json70.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
