--- a/FinanceMs/FinaceMs.WebDictHelper/FinaceMs.WebDictHelper.csproj
+++ b/FinanceMs/FinaceMs.WebDictHelper/FinaceMs.WebDictHelper.csproj
@@ -11,6 +11,10 @@
     <AssemblyName>FinaceMs.WebDictHelper</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <SccProjectName>Firefly Project</SccProjectName>
+    <SccLocalPath>..</SccLocalPath>
+    <SccAuxPath />
+    <SccProvider>MSSCCI:Hansky Firefly</SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
