--- a/FinanceMs/FinanceMs.Import/FinanceMs.Import.csproj
+++ b/FinanceMs/FinanceMs.Import/FinanceMs.Import.csproj
@@ -51,12 +51,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CSZDOperate.cs" />
     <Compile Include="ImportManage.cs" />
     <Compile Include="MDMAgencyOperate.cs" />
     <Compile Include="MDMIndustryOperate.cs" />
     <Compile Include="OutManage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XZQHOperate.cs" />
+    <Compile Include="ZGBMOperate.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FinanceMs.Common\FinanceMs.Common.csproj">
