添加项目引用

--- a/FinanceMs/FinanceMs.Common/FinanceMs.Common.csproj
+++ b/FinanceMs/FinanceMs.Common/FinanceMs.Common.csproj
@@ -64,6 +64,8 @@
     <Compile Include="ConvertsData.cs" />
     <Compile Include="DBUtility.cs" />
     <Compile Include="EnumType.cs" />
+    <Compile Include="Models\MDMAgency.cs" />
+    <Compile Include="Models\MDMIndustry.cs" />
     <Compile Include="Models\ResNewFJM.cs" />
     <Compile Include="Models\MDMXZQH.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
