--- a/FinanceMs/FinaceMs.WebDictHelper/FinaceMs.WebDictHelper.csproj
+++ b/FinanceMs/FinaceMs.WebDictHelper/FinaceMs.WebDictHelper.csproj
@@ -34,6 +34,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Genersoft.MDM.Pub.Server, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\..\DRP_Refer.Dll\MDM\Genersoft.MDM.Pub.Server.dll</HintPath>
+    </Reference>
     <Reference Include="genersoft.platform.bizcomponent.basiclib">
       <HintPath>..\..\..\..\..\..\..\..\山东省财政厅\03代码库\DRP_Refer.Dll\GSP\genersoft.platform.bizcomponent.basiclib.dll</HintPath>
     </Reference>
