--- a/FinanceMs/FinaceMs.WebDictHelper/FinaceMs.WebDictHelper.csproj
+++ b/FinanceMs/FinaceMs.WebDictHelper/FinaceMs.WebDictHelper.csproj
@@ -65,6 +65,10 @@
       <Name>FinanceMs.Common</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Content Include="script\commonFinace.js" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
