导入、导出修改 方法未完成

--- a/FinanceMs/FinanceMs.Common/FinanceMs.Common.csproj
+++ b/FinanceMs/FinanceMs.Common/FinanceMs.Common.csproj
@@ -74,6 +74,7 @@
     <Compile Include="EnumType.cs" />
     <Compile Include="FinaceLog.cs" />
     <Compile Include="Models\MDMAgency.cs" />
+    <Compile Include="Models\MDMEnterprise.cs" />
     <Compile Include="Models\MDMIndustry.cs" />
     <Compile Include="Models\MDMCSZD.cs" />
     <Compile Include="Models\MDMZGBM.cs" />
